[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvppythumbnails"
version = "0.1.0"
description = "Generate thumbnail grid from video folder"
authors = [{ name = "hvppycoding" }]
dependencies = [
    "opencv-python",
    "numpy"
]

[project.scripts]
hvppythumbnails = "hvppythumbnails.cli:main"