[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvppythumbnails"
version = "0.1.0"
description = "Generate thumbnail grid from video folder"
authors = [{ name = "hvppycoding" }]
dependencies = [
    "imageio",
    "opencv-python",
    "numpy",
    "dlib",
    "pillow"
]

[project.scripts]
hvppythumbnails = "hvppythumbnails.cli:main"